k8s_system/container_registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-registry
  labels:
    app: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      containers:
      - name: container-registry
        image: registry
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: container-registry-pvc
